[tool.poetry]
name = "pypkgs_yx"
version = "0.1.0"
description = "Python package that eases the pain of concatenating Pandas categoricals!"
authors = ["William Xu <yihangxu001@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/williamxu7/pypkgs_YX"
repository = "https://github.com/williamxu7/pypkgs_YX"
documentation = 'https://package_YX.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
